# habitz

./: .gitignore  .gitmojirc.json  .mise.toml  README.md  commitlint.config.js  package.json  pnpm-lock.yaml
.husky/: commit-msg  gerrit
backend/: .editorconfig  .gitignore  Dockerfile  Jenkinsfile  build.gradle
backend/src/main/resources/: application-dev.yml  application.properties  application.yaml  application.yml
crawler/: pyproject.toml
crawler/crawler/: crawler_finance_article.py
crawler/data/: econoi_article_2024-05-14.csv  econoi_article_2024-05-16.csv
exec/: backend-porting-manual.md  frontend-porting-manual.md
exec/data/: habitz_dump.sql
exec/docker-compose/: docker-compose.gerrit.yml  docker-compose.jenkins.yml  docker-compose.mysql.yml  docker-compose.npm.yml  docker-compose.redis.yml
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  Jenkinsfile  next.config.mjs  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/.husky/: commit-msg
frontend/.storybook/: main.ts  preview.ts  preview.tsx
frontend/public/: question-mark.json
frontend/src/: middleware.ts
frontend/src/apis/: axios.ts  toss.ts
frontend/src/app/: fonts.ts  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(child)/: layout.tsx
frontend/src/app/(common)/: layout.tsx  page.tsx
frontend/src/app/(parent)/: layout.tsx
frontend/src/app/invite/: page.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: create-style-context.tsx  date.ts
frontend/src/queries/: usePoint.ts
frontend/src/stores/: authStore.ts  userStore.ts
(+375 files in other folders)
