[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "를 위한 기사를 크롤링 하고, 퀴즈를 생성합니다."
authors = ["mblaqsj1015 <mblaqsj1015@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.31.0"
urllib3 = "1.26.16"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
